--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "express-validator": "^2.21.0",
+    "ftp": "^0.3.10",
     "jade": "^1.11.0",
     "jsftp": "^1.5.5",
     "moment": "^2.16.0",
